--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <html>
 
   <head>
-    <title>Pierre Vanoverschelde</title>
-    <meta name="description" content="Pierre Vanoverschelde website">
-    <meta name="keywords" content="pierre, vanoverschelde, linkedin, cv, job, euromed, kedge, le wagon, dev, developer, pro, full stack, js, html, css, ruby, rails">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pierre Vanoverschelde website</title>
+    <meta name="description" content="Web developer for the most part. The Leftovers, David Fincher and music lover for the rest. If you want to know more about me, feel free to enter this website.">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
-    <link rel="icon" href="assets/images/favicon.ico">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
   </head>
 
   <body>
+
     <!-- Main content -->
-    <div class="main-content">
-      <div>
+    <div class="container-fluid">
+      <div class="row">
         <h1>Hi, I'm Pierre Vanoverschelde<i class="fa fa-adjust toggle-light" aria-hidden="true"></i></h1>
         <h4>Web developer for the most part. The Leftovers, David Fincher and music lover for the rest.</h4>
         <h4>If you want to know more about me, feel free to follow me (or send me an email):</h4>
+      </div>
+      <div class="row">
         <ul>
           <li><a href="mailto:pierre.vano@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/pierrevano"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></li>
@@ -32,45 +37,11 @@
       </div>
     </div>
 
-    <!-- StatCounter -->
-    <script type="text/javascript">
-      var sc_project=9076218;
-      var sc_invisible=1;
-      var sc_security="c10d6c16";
-      var scJsHost = (("https:" == document.location.protocol) ?
-      "https://secure." : "http://www.");
-      document.write("<sc"+"ript type='text/javascript' src='" +
-      scJsHost+
-      "statcounter.com/counter/counter.js'></"+"script>");
-    </script>
-    <noscript>
-      <div class="statcounter">
-        <a title="tumblr visitor" href="http://statcounter.com/tumblr/" target="_blank">
-        <img class="statcounter" src="http://c.statcounter.com/9076218/0/c10d6c16/1/" alt="tumblr visitor">
-        </a>
-      </div>
-    </noscript>
-
-    <!-- Nightmode and open in new tab links -->
-    <script>
-      if (localStorage.getItem("preferences") != null) {
-        getPreferences = localStorage.preferences;
-        $("html, body, a").addClass('nightmode');
-      }
-      $(document).ready(function() {
-        $("i.toggle-light").click(function(){
-          getPreferences = localStorage.preferences;
-          $("html, body, a").toggleClass('nightmode');
-          if ($("html, body, a").hasClass('nightmode')) {
-            localStorage.setItem('preferences', 'nightmode');
-          }
-          else {
-            localStorage.removeItem('preferences');
-          }
-        });
-      });
-      $('ul a').attr('target', '_blank');
-    </script>
+    <!-- Js scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="assets/javascript/nightmode.js"></script>
+    <script src="assets/javascript/newtab.js"></script>
+    <script src="assets/javascript/statcounter.js"></script>
 
   </body>
 </html>
