editing statcounter js file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="assets/javascript/nightmode.js"></script>
     <script src="assets/javascript/newtab.js"></script>
-    <script src="assets/javascript/statcounter.js"></script>
+
+    <!-- StatCounter js -->
+    <script type="text/javascript">
+      var sc_project=9076218;
+      var sc_invisible=1;
+      var sc_security="c10d6c16";
+      var scJsHost = (("https:" == document.location.protocol) ?
+      "https://secure." : "http://www.");
+      document.write("<sc"+"ript type='text/javascript' src='" +
+      scJsHost+
+      "statcounter.com/counter/counter.js'></"+"script>");
+    </script>
+    <noscript>
+      <div class="statcounter">
+        <a title="real time web analytics" href="http://statcounter.com/" target="_blank">
+          <img class="statcounter" src="//c.statcounter.com/9076218/0/c10d6c16/1/" alt="real time web analytics">
+        </a>
+      </div>
+    </noscript>
 
   </body>
 </html>
