--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Main content -->
     <div class="container-fluid">
       <div class="row">
-        <h1>Hi, I'm Pierre <span>Vanoverschelde<i class="fa fa-adjust toggle-light" aria-hidden="true"></i></span></h1>
+        <h1>Hi, I'm Pierre Vanoverschelde<i class="fa fa-adjust toggle-light" aria-hidden="true"></i></h1>
         <h4>Web developer for the most part. The Leftovers, David Fincher and music lover for the rest.</h4>
         <h4>If you want to know more about me, feel free to follow me (or send me an email):</h4>
       </div>
