--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico">
   </head>
 
+  <!-- Main content -->
   <body>
-
-    <!-- Main content -->
     <div class="container-fluid">
       <div class="row">
         <h1>Hi, I'm Pierre Vanoverschelde<i class="fa fa-adjust toggle-light" aria-hidden="true"></i></h1>
@@ -27,12 +26,12 @@
           <li><a href="mailto:pierre.vano@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/pierrevano"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://www.linkedin.com/in/pierrevanoverschelde"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.facebook.com/pierreschelde"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a></li>
+<!--           <li><a href="https://www.facebook.com/pierreschelde"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://www.twitter.com/pierreschelde"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/pierreschelde"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.instagram.com/pierreschelde"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a></li> -->
           <li><a href="https://www.youtube.com/channel/UCpSMOn2qG_smhVFhInoxaVg?sub_confirmation=1"><i class="fa fa-youtube fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="http://toucheradiostation.com/"><i class="fa fa-tumblr fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="https://soundcloud.com/toucheradiostation"><i class="fa fa-soundcloud fa-3x" aria-hidden="true"></i></a></li>
+<!--           <li><a href="http://toucheradiostation.com/"><i class="fa fa-tumblr fa-3x" aria-hidden="true"></i></a></li>
+          <li><a href="https://soundcloud.com/toucheradiostation"><i class="fa fa-soundcloud fa-3x" aria-hidden="true"></i></a></li> -->
         </ul>
       </div>
     </div>
@@ -48,11 +47,8 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-2166920-12', 'auto');
       ga('send', 'pageview');
-
     </script>
-
   </body>
 </html>
