--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pierre Vanoverschelde website</title>
-    <meta name="description" content="Web enthusiast for the most part. The Leftovers, David Fincher and music lover for the rest. If you want to know more about me, feel free to enter this website.">
+    <meta name="description" content="Web enthusiast for the most part. The Leftovers, David Fincher, Quentin Tarantino and music lover for the rest. If you want to know more about me, feel free to enter this website.">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
@@ -18,20 +18,16 @@
     <div class="container-fluid">
       <div class="row">
         <h1>Hi, I'm Pierre Vanoverschelde<i class="fa fa-adjust toggle-light" aria-hidden="true" title="Click me"></i></h1>
-        <h4>Web enthusiast for the most part. The Leftovers, David Fincher and music lover for the rest.</h4>
+        <h4>Web enthusiast for the most part. The Leftovers, David Fincher, Quentin Tarantino and music lover for the rest.</h4>
         <h4>If you want to know more about me, feel free to follow me (or send me an email):</h4>
       </div>
       <div class="row">
         <ul>
-          <li><a href="mailto:pierre.vano@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a></li>
+          <li><a href="mailto:pierreschelde@pm.me"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/pierrevano"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://www.linkedin.com/in/pierrevanoverschelde"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a></li>
-<!--           <li><a href="https://www.facebook.com/pierreschelde"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://www.twitter.com/pierreschelde"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/pierreschelde"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a></li> -->
           <li><a href="https://www.youtube.com/channel/UCpSMOn2qG_smhVFhInoxaVg?sub_confirmation=1"><i class="fa fa-youtube fa-3x" aria-hidden="true"></i></a></li>
-<!--           <li><a href="http://toucheradiostation.com/"><i class="fa fa-tumblr fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="https://soundcloud.com/toucheradiostation"><i class="fa fa-soundcloud fa-3x" aria-hidden="true"></i></a></li> -->
         </ul>
       </div>
     </div>
