add resume link

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       <div class="row">
         <h1>Hi, I'm Pierre Vanoverschelde<i class="fa fa-adjust toggle-light" aria-hidden="true" title="Click me"></i></h1>
         <h4>Web enthusiast for the most part. The Leftovers, David Fincher, Quentin Tarantino and music lover for the rest.</h4>
-        <h4>If you want to know more about me, feel free to follow me (or send me an email):</h4>
+        <h4>If you want to know more about me, feel free to download my resume, send me an email or follow me :</h4>
       </div>
       <div class="row">
         <ul>
+          <li><a href="https://www.dropbox.com/s/lapbdueflgd1j21/CV_Pierre_Vanoverschelde.pdf?dl=0"><i class="fa fa-file-pdf-o fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="mailto:pierreschelde@pm.me"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/pierrevano"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://www.linkedin.com/in/pierrevanoverschelde"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a></li>
